Fixed dark mode

--- a/assets/scss/_navigation_dark.scss
+++ b/assets/scss/_navigation_dark.scss
@@ -33,10 +33,6 @@
     .menu-button {
       @media only screen and (max-width : 768px) {
         color: $fg-color-dark;
-        &:hover,
-        &:focus {
-          color: $link-color-dark;
-        }
       }
     }
   }
